[package]
name = "slender-math"
version = "0.1.0"
edition = "2021"
authors = ["Mathis Rech"]
license = "MIT"
categories = ["mathematics", "game-development"]
keywords = ["gamedev", "math", "vector", "matrix", "simd"]
description = "Lightweight math library for game development"
repository = "https://github.com/Artentus/slender-math"
readme = "README.md"

[features]
default = [ "bytemuck", "short_names", "color_fields" ]
short_names = []
color_fields = []

[dependencies]
bytemuck = { version = "1.13", optional = true }
